# genai-pyo3

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: async_chat_basic.py  async_stream_chat.py  client_overrides.py  gemini_env.py  gemini_stream_env.py
python/genai_pyo3/: __init__.py  __init__.pyi  types.py
src/: lib.rs
