[package]
name = "genai-pyo3"
version = "0.7.0-beta.10.dev2"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Python bindings for rust-genai"

[lib]
name = "_genai_pyo3"
crate-type = ["cdylib"]

[dependencies]
# Pin to a rust-genai commit so builds are reproducible.
# a3e34ca = Anthropic request extension stack on ropoctl/rust-genai.
genai = { git = "https://github.com/ropoctl/rust-genai", rev = "a3e34cafd794b0ee3f5bc1c216c90b5e35f0960e" }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde_json = "1"
pythonize = "0.28"
# We need `reqwest::header::{HeaderMap, HeaderName, HeaderValue}` to hand
# custom default headers through to rust-genai's `WebConfig`. rust-genai
# already depends on reqwest 0.13 with "json", "stream", "gzip"; we take
# it here with `default-features = false` since we only use its header
# types, and the shared version resolves to the same compiled crate.
reqwest = { version = "0.13", default-features = false }
