[package]
name = "genai-pyo3"
version = "0.7.0-beta.14.dev1"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Python bindings for rust-genai"

[lib]
name = "_genai_pyo3"
crate-type = ["cdylib"]

[dependencies]
# Pin rust-genai's provider-owned schema sanitizer pending upstream PR #263.
genai = { git = "https://github.com/ropoctl/rust-genai", rev = "57fd45ff53e320e9f4cdf7d6c53a276404484420" }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde_json = "1"
pythonize = "0.28"
# We need `reqwest::header::{HeaderMap, HeaderName, HeaderValue}` to hand
# custom default headers through to rust-genai's `WebConfig`. rust-genai
# already depends on reqwest 0.13 with "json", "stream", "gzip"; we take
# it here with `default-features = false` since we only use its header
# types, and the shared version resolves to the same compiled crate.
reqwest = { version = "0.13", default-features = false }
