[package]
name = "genai-pyo3"
version = "0.7.0-beta.15.dev2"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Python bindings for rust-genai"

[lib]
name = "_genai_pyo3"
crate-type = ["cdylib"]

[dependencies]
# Pin upstream rust-genai 0.7.0-beta.15-WIP for reproducible builds.
# Includes adapter-owned schema sanitization (#263) and custom tools (#266).
genai = { git = "https://github.com/jeremychone/rust-genai", rev = "28a62a6ddf1f51ea4f232bb9efdc2ca384b5b13a" }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.28", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"
serde_json = "1"
pythonize = "0.28"
# We need `reqwest::header::{HeaderMap, HeaderName, HeaderValue}` to hand
# custom default headers through to rust-genai's `WebConfig`. rust-genai
# already depends on reqwest 0.13 with "json", "stream", "gzip"; we take
# it here with `default-features = false` since we only use its header
# types, and the shared version resolves to the same compiled crate.
reqwest = { version = "0.13", default-features = false }
