[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "genai-pyo3"
version = "0.1.0"
description = "Python bindings for rust-genai"
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: CPython",
]

[tool.maturin]
python-source = "python"
module-name = "genai_pyo3._genai_pyo3"
